<resources>
    <string name="app_name">독거노인 프로젝트</string>
    <string name="UserName">아이디</string>
    <string name="Password">비밀번호</string>
    <string name="Communication">커뮤니케이션</string>
    <string name="HealthCare">건강관리</string>
    <string name="Login">로그인</string>
    <string name="UserCreate">회원가입</string>
    <string name="VoiceCall">음성통화</string>
    <string name="VideoCall">영상통화</string>
    <string name="Message">문자메시지</string>
    <string name="Cloud">SNS</string>
    <string name="Children">자녀</string>
    <string name="GrandChild">손주</string>
    <string name="Kindred">친척</string>
    <string name="Friend">친구</string>
    <string name="HospitalReservation">병원예약</string>
    <string name="HospitalCheck">예약확인</string>
    <string name="PsychoTherapy">심리치료</string>
    <string name="HospitalLocation">주변위치</string>
    <string name="Id">아이디</string>
    <string name="Name">이름</string>
    <string name="Birthday">생년월일</string>
    <string name="ChildInformation">자녀정보</string>
    <string name="ManagerInformation">관리자정보</string>
    <string name="Erase">지우기</string>
    <string name="Send">보내기</string>
    <string name="Draw_linear">그리기</string>
</resources>
