<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HealthCare">

    <Button
        android:id="@+id/HospitalReservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HospitalReservation" />

    <Button
        android:id="@+id/ReservationCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HospitalCheck" />

    <Button
        android:id="@+id/PsychoTherapy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PsychoTherapy" />

    <Button
        android:id="@+id/HospitalLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HospitalLocation" />
</LinearLayout>