<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/ChildrenVoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:background="@drawable/buttonbackground"
        android:text="@string/Children" />

    <Button
        android:id="@+id/GrandChildVoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:background="@drawable/buttonbackground"
        android:text="@string/GrandChild" />

    <Button
        android:id="@+id/KindredVoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:background="@drawable/buttonbackground"
        android:text="@string/Kindred" />

    <Button
        android:id="@+id/FriendVoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:background="@drawable/buttonbackground"
        android:text="@string/Friend" />
</LinearLayout>