<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Message">

    <Button
        android:id="@+id/ChildrenMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:background="@drawable/buttonbackground"
        android:text="@string/Children" />

    <Button
        android:id="@+id/GrandChildrenMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:background="@drawable/buttonbackground"
        android:text="@string/GrandChild" />

    <Button
        android:id="@+id/KindredMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:background="@drawable/buttonbackground"
        android:text="@string/Kindred" />

    <Button
        android:id="@+id/FriendMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:background="@drawable/buttonbackground"
        android:text="@string/Friend" />
</LinearLayout>