<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/VoiceCall"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/buttonbackground"
                android:text="@string/VoiceCall" />

            <Button
                android:id="@+id/VideoCall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/buttonbackground"
                android:style="?android:attr/buttonBarButtonStyle"
                android:text="@string/VideoCall"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <Button
            android:id="@+id/Message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonbackground"
            android:text="@string/Message" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <Button
            android:id="@+id/Cloud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/buttonbackground"
            android:text="@string/Cloud" />
    </LinearLayout>
</LinearLayout>